Fixes the Nav issue - the Nav bar will no longer show it's children when it is closed - a bug thrown when the avatar or header hashes array wasn't available is fixed in various templates. - the nav menu being slightly too high is fixed - update electron-prebuilt to electron - Closes #102

--- a/styles/components/_buttons.scss
+++ b/styles/components/_buttons.scss
@@ -94,7 +94,7 @@
 
   input[type="checkbox"] {
     // todo: style this to match the designs
-  }  
+  }
 }
 
 .btnTxt {
@@ -152,6 +152,7 @@
   right: 0;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
   transition: 0.2s ease;
+  overflow: hidden;
 
   &.open {
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
